Enumerate aliases on CSSPropertyDeclaration.

Currently, property aliases do not appear when enumerating
CSSPropertyDeclaration. We generate CSSUnresolvedProperty-subclasses
for alias properties, but these classes do not provide a
GetJSPropertyName function, hence CSSPropertyDeclaration::
NamedPropertyEnumerator can't currently know which property names to write.

This patch lifts CSSProperty::GetJSPropertyName/IsEnabled to
CSSUnresolvedProperty and adds generation of these functions to alias
properties.

Notes on runtime flags:

 * The runtime_flag setting on aliased properties already propagate to the
   alias. (See css_properties.py:expand_aliases).
 * It turns out that we currently have no aliased property with a runtime
   flag. This means IsEnabled-generation is currently unused for aliases.
   I have manually tested a fake alias against a runtime_flag'd property
   to verify that the generated code works.

R=foolip@chromium.org, futhark@chromium.org

Bug: 768917
Change-Id: Ibde70b71416bdbe792d05cc21f31794f997cb968
Reviewed-on: https://chromium-review.googlesource.com/1059615
Commit-Queue: Anders Ruud <andruud@chromium.org>
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Reviewed-by: Philip Jägenstedt <foolip@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559848}
Former-commit-id: aae947a01acaf7bce18c309244b64c8ef110a349